fixed faq buy-button iOS styles

--- a/src/app/pages/faq/faq.component.scss
+++ b/src/app/pages/faq/faq.component.scss
@@ -25,7 +25,7 @@
 		&.buy-btn {
 			color: #fff;
 			border-width: 0;
-			padding: 5pt 10pt 6pt 10pt;
+			padding: 5pt 12pt 6pt 12pt;
 		}
 	}
 	.content {
